using System.Windows;

namespace HoudiniSafe.View
{
    public partial class MainView : Window
    {
        public MainView()
        {
            InitializeComponent();
        }
    }
}